2024-02-21T00:29:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7982032535 # 135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 334 697 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 335 699 / 339 705
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-06] / [2024-02-20]

2024-02-20T00:29:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7966688559 # 132
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 333 695 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 334 697 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-05] / []

2024-02-19T00:31:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7952844976 # 129
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 332 693 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 333 695 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-04] / []

2024-02-18T00:32:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7945300324 # 126