@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-21T00:29:44Z",
+  "timestamp" : "2024-02-21T08:09:17Z",
   "count_outdated" : 699,
   "uniques_outdated" : 335,
-  "count" : 705,
-  "uniques" : 339,
+  "count" : 706,
+  "uniques" : 340,
   "clones" : [
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-02-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
