@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2024-02-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
